--- a/css/style.css
+++ b/css/style.css
@@ -176,6 +176,7 @@ body {
 	padding: 20px;
 	text-shadow: 2px 2px 5px #000, 5px -3px 8px rgb(0, 26, 255);
 	text-transform: uppercase;
+	margin-bottom: 20px;
 }
 
 .lists {
@@ -303,6 +304,7 @@ body {
 	font-size: 30px;
 	text-transform: uppercase;
 	font-family: "SFProDisplay";
+	margin-bottom: 20px;
 }
 
 .text-one {
@@ -316,6 +318,7 @@ body {
 	/* white-space: nowrap; */
 	font-family: "SFProDisplay";
 	font-weight: 700;
+	margin-bottom: 10px;
 
 }
 
@@ -329,7 +332,7 @@ body {
 	text-indent: 25px;
 	letter-spacing: 15px;
 	font-family: "Lutsk-sity";
-	
+	margin-bottom: 10px;
 }
 
 .text-three {	
@@ -342,10 +345,12 @@ body {
 	line-height: 1.4;
 	font-family: "AmerikaPro";
 	font-weight: 700;
+	margin-bottom: 10px;
 }
 
 .text-four {
 	background-color: darkolivegreen;
+	margin-bottom: 10px;
 }
 
 .text-four ~ p{
@@ -367,6 +372,7 @@ body {
 	text-transform: uppercase;
 	line-height: 1.3;
 	font-family: "Brozas";
+	margin-bottom: 20px;
 }
 
 .text-five {
@@ -377,6 +383,7 @@ body {
 	text-shadow: 1px 2px 15px #000;
 	word-spacing: 20px;
 	font-family: "KenyanCoffeeStencilSb";
+	margin-bottom: 10px;
 	
 }
 
@@ -389,6 +396,7 @@ body {
 	line-height: 1.2;
 	font-family: "Kramola";
 	font-weight: 400;
+	margin-bottom: 20px;
 }
 
 .text-six {
@@ -398,6 +406,11 @@ body {
 	letter-spacing: 10px;
 	font-family: "RedOctober";
 	font-weight: 300;
+	margin-bottom: 10px;
+}
+
+.text-seven {
+	margin-bottom: 10px;
 }
 
 .text-seven + p{
@@ -405,6 +418,7 @@ body {
 	padding: 10px 40px 20px 40px;
 	text-shadow: 10px 2px 5px #000;
 	word-spacing: 30px;
+	margin-bottom: 10px;
 }
 
 .subtitle-four {
@@ -414,6 +428,7 @@ body {
 	font-size: 30px;
 	font-style: italic;
 	font-family: "Veles";
+	margin-bottom: 20px;
 }
 
 .text-eight {
@@ -422,6 +437,7 @@ body {
 	text-shadow: 1px 2px 10px #000;
 	letter-spacing: 5px;
 	font-family: "RuslanDisplay";
+	margin-bottom: 10px;
 }
 
 .text-nine {
@@ -430,6 +446,7 @@ body {
 	text-shadow: 15px 5px 8px #000;
 	word-spacing: 15px;
 	font-family: "Veselka4F";
+	margin-bottom: 10px;
 }
 
 .text-ten {
@@ -437,6 +454,7 @@ body {
 	padding: 15px 60px 15px 60px;
 	text-shadow: 8px 20px 12px #000;
 	font-family: "StalinistOne";
+	margin-bottom: 10px;
 }
 
 .text-eleven {
@@ -446,18 +464,34 @@ body {
 	letter-spacing: 8px;
 	font-family: "Lutsk-sity";
 	font-weight: 400;
+	margin-bottom: 10px;
 }
 
 .text-twelve {
 	padding: 12px 40px 12px 40px;
 	text-shadow: 10px 2px 3px #000;
 	word-spacing: 20px;
+	/* margin-bottom: 10px; */
 }
 
 .text-description {
 	color: rgb(83, 102, 53);
 	padding: 15px 60px 15px 60px;
 	text-shadow: 8px 2px 12px #000;
+	margin-bottom: 10px;
+}
+
+.text-thirteen {
+	margin-bottom: 10px;
+	font-size: 18px;
+	text-shadow: 15px 2px 6px #000;
+}
+
+.text-fourteen {
+	margin-bottom: 10px;
+	font-family: "Veselka4F";
+	font-size: 20px;
+	text-shadow: 12px 2px 8px #000;
 }
 
 .text-thirteen > p{
@@ -470,12 +504,14 @@ body {
 	color: rgb(125, 102, 255);
 	padding: 15px 60px 15px 60px;
 	text-shadow: 5px 8px 12px #000;
+	margin-bottom: 10px;
 }
 
 .text-sixteen {
 	color: aquamarine;
 	padding: 15px 60px 15px 60px;
 	text-shadow: 20px 10px 12px #000;
+	margin-bottom: 10px;
 }
 
 .text-seventeen {
@@ -483,12 +519,14 @@ body {
 	padding: 15px 60px 15px 60px;
 	text-shadow: 8px 5px 15px #000;
 	font-family: "Kramola";
+	margin-bottom: 10px;
 }
 
 .text-eighteen {
 	color: rgb(172, 212, 63);
 	padding: 15px 60px 15px 60px;
 	text-shadow: 10px 8px 12px #000;
+	margin-bottom: 10px;
 }
 
 .text-nineteen {
@@ -496,12 +534,14 @@ body {
 	padding: 15px 60px 15px 60px;
 	text-shadow: 2px 6px 16px #000;
 	font-family: "RuslanDisplay";
+	margin-bottom: 10px;
 }
 
 .text-twenty {
 	color: goldenrod;
 	padding: 15px 60px 15px 60px;
 	text-shadow: 7px 7px 2px #000;
+	margin-bottom: 10px;
 }
 
 .text-thirty {
@@ -509,12 +549,14 @@ body {
 	padding: 15px 60px 15px 60px;
 	text-shadow: 9px 3px 14px #000;
 	font-family: "Lobster";
+	margin-bottom: 10px;
 }
 
 .text.forty {
 	color: khaki;
 	padding: 15px 60px 15px 60px;
 	text-shadow: 8px 12px 6px #000;
+	margin-bottom: 10px;
 }
 
 div.block {
